--- a/tmux.conf
+++ b/tmux.conf
@@ -11,9 +11,6 @@ set -g history-limit 5000
 # use vim key bindings
 setw -g mode-keys vi
 
-# disable mouse
-setw -g mode-mouse off
-
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
 
@@ -40,6 +37,7 @@ set -g renumber-windows on
 # tmux prefix
 unbind C-b
 set -g prefix C-a
+bind a send-prefix
 
 # create 'v' alias for selecting text
 bind-key -t vi-copy v begin-selection
@@ -75,10 +73,6 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 ###########################
 # Status Bar
 ###########################
-
-# enable UTF-8 support in status bar
-set -g status-utf8 on
-
 # set refresh interval for status bar
 set -g status-interval 30
 
@@ -111,3 +105,4 @@ set -g pane-border-fg colour235
 set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
+set -g default-command "reattach-to-user-namespace -l /usr/local/bin/fish"
