--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,8 @@
 #  Configuration
 ###########################
 
+set -g default-shell /usr/bin/fish
+
 # use 256 term for pretty colors
 set -g default-terminal "screen-256color"
 
@@ -38,9 +40,6 @@ set -g renumber-windows on
 unbind C-b
 set -g prefix C-a
 bind a send-prefix
-
-# create 'v' alias for selecting text
-bind-key -t vi-copy v begin-selection
 
 # paste
 unbind C-p
@@ -105,4 +104,3 @@ set -g pane-border-fg colour235
 set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
-set -g default-command "reattach-to-user-namespace -l /usr/local/bin/fish"
